--- a/docs/styles.css
+++ b/docs/styles.css
@@ -16,7 +16,7 @@
 
 .Form {
   display: flex;
-  background-color: gray;
+  background-color: salmon;
   justify-content: center;
 }
 
@@ -25,6 +25,8 @@ input[type="file"] {
 }
 
 .form-button, .form-input {
+  display: flex;
+  flex-direction: column;
   padding: 0.7em 1.4em;
   margin:0 0.25em 0.5em 0.25em;
   border-radius:5px;
@@ -32,10 +34,11 @@ input[type="file"] {
   text-decoration:none;
   font-family:'Roboto',sans-serif;
   font-size: 2rem;
-  color: white;
-  background-color:salmon;
+  color: salmon;
+  background-color:white;
   text-align:center;
   height: 5rem;
+  width: fit-content;
   box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
   outline: none;
   transition: 0.1s all;
@@ -55,7 +58,9 @@ input[type="file"] {
   width:'100%';
   height:'auto';
   border-radius: 5px;
-  margin: 2rem 0 2rem 0;
+  margin: 0 0 1rem 0;
+  padding: 1rem 1rem 5rem 1rem;
+  background-color: white;
 }
 
 h1 {
@@ -63,4 +68,32 @@ h1 {
   text-align: center;
   padding: 1rem;
   text-shadow: 7px 6px 16px rgba(0, 0, 0, .5);
+  color: white;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 3rem;
+  text-align: center;
+  padding: 1rem;
+  text-shadow: 7px 6px 16px rgba(0, 0, 0, .5);
+  color: white;
+}
+
+p {
+  font-size: xx-small;
+}
+
+.keyword-wrapper {
+  display: flex;
+  width:'100%';
+  height:'auto';
+  flex-wrap: wrap;
+}
+
+.keyword {
+  margin: .5rem 1rem .5rem 1rem;
+  background-color: white;
+  padding: 1% 5% 1% 5%;
+  border-radius: 20px;
 }
